add the speaker

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
             <div id="word-info">
                 <p><strong>Nghĩa:</strong> <span id="target-meaning">sách</span></p>
-                <p><strong>Cách đọc:</strong> <span id="target-reading">ほん</span></p>
+                <p><strong>Cách đọc:</strong> <span id="target-reading">ほん</span> <button id="toggleAudioBtn" onclick="speakNewWorld()">🔊</button>
+                
+                </p>
             </div>
             
             <p class="zone-label">Thả Kanji vào đây (Drop Zone):</p>
