add retry button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                 <button data-level="N2" class="level-btn">N2</button>
                 <button data-level="N1" class="level-btn">N1</button>
             </div>
+            <div id="game-retry-container" style="display: none;">
+                <button class="level-btn retry-btn">🔄️</button>
+            </div>
         </div>
 
         <div id="game-container" style="display: none;">
